2004-04-19  Choe Hwanjin <krisna@kldp.org>
	* src/server.c: charset 체크하면서 ko로 시작하지 않으면 워닝을
	  출력하도록 함

2004-03-15  Choe Hwanjin <krisna@kldp.org>
	* release 0.13

2004-03-07  Choe Hwanjin <krisna@kldp.org>
	* src/ui.c: about 창 모양 개선
	* po/ko.po: 번역 업데이트

2004-03-05  Choe Hwanjin <krisna@kldp.org>
	* src/nabi.h src/main.c src/server.h src/server.c src/ui.c:
	xim_name이라는 컨피그 옵션과 --xim-name 이라는 커맨드 라인 옵션을
	추가함. 이것을 지정하면 XMODIFIER값을 다른 것을 사용할 수 있음

2004-03-01  Choe Hwanjin <krisna@kldp.org>
	* src/ui.c: GtkTextView를 사용하게 되면 GtkIMContext를 생성하게 되어
	XIM 서버가 멈추는 위험한 상황이 자주 발생하므로 About 창에서
	GtkTextView대신 GtkLabel를 사용하도록 수정함

2004-02-29  Choe Hwanjin <krisna@kldp.org>
	* IMdkit/i18nIc.c IMdkit/i18nMethod.c IMdkit/i18nPtHdr.c:
	바이트 오더 문제를 해결하기 위한 수정

2004-02-18  Choe Hwanjin <krisna@kldp.org>
	* GNU gettext 대신 glib gettext를 사용하도록 수정

2004-02-16  Choe Hwanjin <krisna@kldp.org>
	* src/candidate.c: 한자 선택창 페이지를 바꾸면서 화면에서 벗어나는
	  문제를 수정 (#300256)

2004-02-10  Choe Hwanjin <krisna@kldp.org>
	* IMdkit/Makefile.am src/Makefile.am: -Wall 컴파일 옵션 제거(#300245)

2004-02-02  Choe Hwanjin <krisna@kldp.org>
	* src/ui.c: 위젯을 만들기 전에 XMODIFIERS 환경변수를 지움

2004-01-29  Choe Hwanjin <krisna@kldp.org>
	* src/candidate.c src/nabi.h src/server.c src/server.h src/ui.c:
	  설정값 candidate_font 추가, candidate 글자에 사용할 폰트 지정

2004-01-27  Choe Hwanjin <krisna@kldp.org>
	* src/candidate.h src/candidate.c src/ic.c src/ic.h src/handler.c:
	  candidate window에서 한자의 뜻을 보여주기 위해 GtkTable대신
	  GtkTreeView를 사용함

2004-01-09  Choe Hwanjin <krisna@kldp.org>
	* src/candidate.c src/candidate.h src/ic.c src/nabi.h src/server.c
          src/server.h src/ui.c tables/Makefile.am tables/candidate/nabi.txt:
	  기존에 사용하던 static array를 버리고 외부의 파일로 저장된 candidate
	  table을 사용하는 기능을 구현

2003-12-29  Choe Hwanjin <krisna@kldp.org>
	* IMdkit/i18nIc.c,IMdkit/i18nPtHdr.c: 메모리 leak 문제 몇가지 해결

2003-12-23  Choe Hwanjin <krisna@kldp.org>
	* src/server.h,src/server.c,src/automata.c: backspace정보를 통계 정보
	  구조체에 남기는 코드의 버그를 해결
